[FIX] sticky navbar z-index

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -31,8 +31,9 @@
   position: absolute;
   right: 0;
   width: 100%;
-  height: 35vh;
+  height: 50vh;
   background-color: #ffffff;
+  z-index: 9999;
 }
 
 .h1 {
